foodorderingsystem-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
  name: foodorderingsystem
spec:
  ports:
    - name: foodorderingsystem
      port: 8080
      targetPort: 8080
      protocol: TCP
  selector:
    app: foodorderingsystem
  type: NodePort
